force-app/main/default/objects/ContentVersion/fields/ClickSignEnvelope__c.field-meta.xml
<CustomField>
    <fullName>ClickSignEnvelope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClickSign Envelope</label>
    <referenceTo>ClickSignEnvelope__c</referenceTo>
    <relationshipLabel>Versões do conteúdo</relationshipLabel>
    <relationshipName>ContentVersions</relationshipName>
    <type>Lookup</type>
</CustomField>