force-app/main/default/objects/ContentVersion/fields/IsProposal__c.field-meta.xml
<CustomField>
    <fullName>IsProposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É uma proposta?</label>
    <type>Checkbox</type>
</CustomField>