force-app/main/default/objects/ContentVersion/fields/IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>IsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>