force-app/main/default/objects/ContentVersion/fields/NomePaginaPDF__c.field-meta.xml
<CustomField>
    <fullName>NomePaginaPDF__c</fullName>
    <description>É preenchido com o nome da Visualforce quando a página PDF é salva automaticamente.</description>
    <label>Nome da página PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>