force-app/main/default/objects/ContentVersion/fields/ProposalCoverKey__c.field-meta.xml
<CustomField>
    <fullName>ProposalCoverKey__c</fullName>
    <label>Proposal Cover Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>