force-app/main/default/objects/ContentVersion/fields/ProposalPayloadHash__c.field-meta.xml
<CustomField>
    <fullName>ProposalPayloadHash__c</fullName>
    <label>Proposal Payload Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>