force-app/main/default/objects/ContentVersion/fields/ProposalPaymentType__c.field-meta.xml
<CustomField>
    <fullName>ProposalPaymentType__c</fullName>
    <label>Proposal Payment Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>