force-app/main/default/objects/ContentVersion/fields/ProposalTemplateRole__c.field-meta.xml
<CustomField>
    <fullName>ProposalTemplateRole__c</fullName>
    <label>Proposal Template Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API_PPTX_TEMPLATE</fullName>
                <default>true</default>
                <label>API PPTX Template</label>
            </value>
            <value>
                <fullName>LEGACY_LAYOUT</fullName>
                <label>Legacy Layout</label>
            </value>
            <value>
                <fullName>AUXILIARY_ASSET</fullName>
                <label>Auxiliary Asset</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>