force-app/main/default/objects/ContentVersion/fields/TipoKitPromocional__c.field-meta.xml
<CustomField>
    <fullName>TipoKitPromocional__c</fullName>
    <label>Tipo Kit Promocional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoKitPromocional</valueSetName>
    </valueSet>
</CustomField>